# data.monster

./: .gitignore  README.md  opencode.json  package-lock.json  package.json  svelte.config.js
.opencode/skills/: .architecture.md  AGENTS.md  README.md  skills-lock.json
.prds/reporting-dashboard-pages/: prd.md  transcript.md
.prds/table-relationships/: prd.md  transcript.md
.specs/chart-lib/: spec.md  tasks-log.json  tasks.json
.specs/local-llm/: spec.md  tasks-log.json  tasks.json
.specs/tauri-migration/: spec.md  tasks-log.json  tasks.json
data.monster/: generate-data.mjs  package-lock.json  package.json  vite.config.ts
data.monster/design-system/: README.md  design-system-variables.md  design-system.html  design-tokens.jsonl
data.monster/src/: app.css  (+1 more)
docs/: design-system-data-monster.html  design-system-hoi.html
docs/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
docs/src-tauri/capabilities/: default.json
docs/src-tauri/icons/: README.md  icon.icns
docs/src-tauri/src/: lib.rs  main.rs  state.rs
docs/src-tauri/src/commands/: chart_templates.rs  component_templates.rs  database.rs  debug.rs  dimensions.rs  files.rs  folders.rs  ingestion.rs  init_data.rs  metrics.rs  mod.rs  postgres.rs  queries.rs  relationships.rs  remote.rs  routes.rs  saved_queries.rs  screenshots.rs  tables.rs  udfs.rs
docs/src-tauri/src/models/: metadata.rs  mod.rs  postgres.rs
docs/src-tauri/src/utils/: formatting.rs  joins.rs  metadata_helpers.rs  mod.rs  slugs.rs  types.rs
research_dashboard_grid/: findings_react_ports.md  findings_svelte_grids.md
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  state.rs
src-tauri/src/commands/: database.rs  files.rs  folders.rs  internal_db.rs  labels.rs  local_llm.rs  mod.rs  postgres.rs  queries.rs  saved_queries.rs  settings.rs  tables.rs  workspace.rs
src-tauri/src/utils/: formatting.rs  metadata_helpers.rs  mod.rs  slugs.rs
(+322 files in other folders)
