[package]
name = "warphead-dev"
version = "1.0.0"
description = "warphead.dev - A desktop data analysis application built with Tauri, SvelteKit, DuckDB and TypeScript"
authors = ["warphead.dev"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "warphead_dev_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2.1.0"
tauri-plugin-dialog = "2.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
duckdb = { version = "1.1", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "stream"] }
futures-util = "0.3"
tauri-plugin-screenshots = "2.2.0"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
walkdir = "2"
regex = "1"


